k8s/frontend-login/ingress-operator.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-ingress-operator
  namespace: login
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: login-coraza-waf@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: login
                port:
                  number: 80
